fix proplems and add footer (not responsive)
next update: reponsivity site and about page

--- a/css/header.css
+++ b/css/header.css
@@ -1,23 +1,26 @@
 @import url('color_pallete.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
-header, .head{
+header,
+.head {
     width: 100%;
 }
 
-.head{
+.head {
     display: flex;
     justify-content: space-around;
     background-color: var(--cor-4);
     padding: 15px;
 }
 
-.head .icon, .lateral .icon{
+.head .icon,
+.lateral .icon {
     width: 40px;
     height: 40px;
     filter: invert(100);
 }
 
-.head input{
+.head input {
     width: 60%;
     border: 0 none;
     border-radius: 18px;
@@ -25,32 +28,77 @@ header, .head{
     text-indent: 20px;
 }
 
-.head button{
+.head button {
     background-color: transparent;
     border: 0 none;
     outline: none;
 }
 
-.menu, .lateral{
+.menu,
+.lateral {
     display: none;
 }
 
+/* footer */
+footer {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    background-color: black;
+    color: white;
+    padding: 30px 0 30px 0;
+    width: 100%;
+}
+
+footer>div {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 0 0 50px 0;
+}
+
+footer li {
+    list-style-type: none;
+    padding: 2.5px 0 2.5px 0;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
+footer i{
+    margin: 0 15px 0 0;
+}
+
+footer p {
+    font-weight: bolder;
+    font-size: larger;
+}
+
+footer p:last-child {
+    font-size: medium;
+    align-self: center;
+}
+
+
+
 /* mobile settings */
 @media screen and (max-width: 767px) {
-    .head{
+    .head {
         position: fixed;
         z-index: 1;
     }
 
-    .menu{
+    .menu {
         display: block;
     }
 
-    .head a:not(:first-child){
+    .head a:not(:first-child) {
         display: none;
     }
 
-    .lateral{
+    .lateral {
         display: flex;
         position: fixed;
         flex-direction: column;
@@ -62,26 +110,26 @@ header, .head{
         padding: 20% 0 0 0;
     }
 
-    .header + div {
+    .header+div {
         padding-top: 60px;
     }
-    
-    .lateral a{
+
+    .lateral a {
         text-decoration: none;
         color: white;
         font-weight: bold;
         white-space: nowrap;
     }
 
-    .lateral .icon{
+    .lateral .icon {
         margin: 5px;
         margin: 10px;
         padding: 5px;
     }
 
-    .open{
+    .open {
         width: 50%;
         transition: 0.5s;
     }
-    
+
 }
