--- a/css/novoAnuncio.css
+++ b/css/novoAnuncio.css
@@ -1,39 +1,42 @@
 @import url('color_pallete.css');
 
-section{
+section {
     height: 90vh;
 }
 
-.center{
+.center {
     display: flex;
     height: 100%;
     align-items: center;
     justify-content: center;
+    background-color: var(--cor-1);
 }
 
-.ui{
+.ui {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: var(--cor-2);
+    background-color: white;
     width: 50vw;
     height: 80vh;
     border-radius: 18px;
     padding: 30px;
-    
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+
 }
 
-.ui h3{
+.ui h3 {
     text-align: center;
 }
 
-.ui input, .ui select{
-    width: 80%;
+.ui input,
+.ui select {
+    width: 75%;
     float: right;
     padding: 5px;
 }
 
-.send{
+.send {
     width: 100% !important;
     font-weight: bolder;
     color: white;
@@ -44,7 +47,7 @@ section{
     transition: 0.5s;
 }
 
-.send:hover{
+.send:hover {
     background-color: white;
     color: var(--cor-5);
     transition: 0.5s;
